// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation component should not render because there is no previous items nor next items 1`] = `""`;

exports[`Navigation component should render with (prev button disabled: false) and (next button disabled: false) 1`] = `
<div
  className="pl-4 mb-4"
>
  <ButtonGroup
    role="group"
    tag="div"
  >
    <Button
      color="secondary"
      disabled={false}
      id="prev-btn"
      onClick={[Function]}
      tag="button"
    >
      <i
        className="material-icons md-2"
      >
        keyboard_arrow_left
      </i>
    </Button>
    <Button
      color="secondary"
      disabled={false}
      id="next-btn"
      onClick={[Function]}
      tag="button"
    >
      <i
        className="material-icons md-2"
      >
        keyboard_arrow_right
      </i>
    </Button>
  </ButtonGroup>
</div>
`;

exports[`Navigation component should render with (prev button disabled: false) and (next button disabled: true) 1`] = `
<div
  className="pl-4 mb-4"
>
  <ButtonGroup
    role="group"
    tag="div"
  >
    <Button
      color="secondary"
      disabled={false}
      id="prev-btn"
      onClick={[Function]}
      tag="button"
    >
      <i
        className="material-icons md-2"
      >
        keyboard_arrow_left
      </i>
    </Button>
    <Button
      color="secondary"
      disabled={true}
      id="next-btn"
      onClick={[Function]}
      tag="button"
    >
      <i
        className="material-icons md-2"
      >
        keyboard_arrow_right
      </i>
    </Button>
  </ButtonGroup>
</div>
`;

exports[`Navigation component should render with (prev button disabled: true) and (next button disabled: false) 1`] = `
<div
  className="pl-4 mb-4"
>
  <ButtonGroup
    role="group"
    tag="div"
  >
    <Button
      color="secondary"
      disabled={true}
      id="prev-btn"
      onClick={[Function]}
      tag="button"
    >
      <i
        className="material-icons md-2"
      >
        keyboard_arrow_left
      </i>
    </Button>
    <Button
      color="secondary"
      disabled={false}
      id="next-btn"
      onClick={[Function]}
      tag="button"
    >
      <i
        className="material-icons md-2"
      >
        keyboard_arrow_right
      </i>
    </Button>
  </ButtonGroup>
</div>
`;
